<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Screen Reader</string>
    <string name="accessibility_service_label">Screen Reader Accessibility</string>
    <string name="setup_subtitle">Large controls only. Start the overlay, open a WeChat image, then tap the floating button to read text aloud.</string>
    <string name="debug_mode_label">Debug OCR boxes after capture</string>
    <string name="save_debug_screenshots_label">Save debug screenshots locally</string>
    <string name="recognized_text_console_label">Show recognized text in app</string>
    <string name="highlight_reading_line_label">Highlight line while reading</string>
    <string name="pause_resume_reading_label">Tap to pause and resume reading</string>
    <string name="developer_mode_button">Developer Mode</string>
    <string name="developer_mode_on">Developer mode is on.</string>
    <string name="developer_mode_off">Developer mode is off.</string>
    <string name="developer_password_hint">Password</string>
    <string name="recognized_text_console_title">Recognized Text</string>
    <string name="status_title">Device Status</string>
    <string name="grant_overlay_permission">Grant Overlay Permission</string>
    <string name="open_accessibility_settings">Open Accessibility Settings</string>
    <string name="open_battery_settings">Open Battery Settings</string>
    <string name="start_overlay">Start Floating Button</string>
    <string name="stop_overlay">Stop Floating Button</string>
    <string name="test_speech">Test Chinese Speech</string>
    <string name="stop_speech">Stop Speech</string>
    <string name="overlay_button_read_label">Read screen text</string>
    <string name="overlay_button_processing_label">Recognizing screen text</string>
    <string name="overlay_button_stop_label">Stop reading aloud</string>
    <string name="overlay_button_pause_label">Pause reading aloud</string>
    <string name="overlay_button_resume_label">Resume reading aloud</string>
    <string name="overlay_button_read_text">Read</string>
    <string name="overlay_button_processing_text">Working</string>
    <string name="overlay_button_stop_text">Stop</string>
    <string name="overlay_button_pause_text">Pause</string>
    <string name="overlay_button_resume_text">Resume</string>
    <string name="notification_title">Screen Reader is running</string>
    <string name="notification_text">Tap the floating button to read text. Use this notification to stop it if needed.</string>
    <string name="notification_channel_name">Screen Reader Overlay</string>
</resources>
